Add create button on header

--- a/YouTube.html
+++ b/YouTube.html
@@ -49,10 +49,10 @@
         </div>
 
         <div class="right-section">
-            
-            <img class="upload-icon" src="icons/upload.svg">
 
-            <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+            <button class="create-button">
+                <span class="span-plus-icon"> + </span> &nbsp; Create
+            </button>
 
             <div class="div-notifications">
                 
