--- a/YouTube.html
+++ b/YouTube.html
@@ -38,12 +38,20 @@
 
                 <img class="search-icon" src="icons/search.svg">
 
+                <div class="tooltip">
+                    Search
+                </div>
+
             </button>
 
             <button class="voice-search-button"> 
 
                 <img class="voice-search-icon" src="icons/voice-search-icon.svg">
                 
+                <div class="tooltip">
+                    Search with voice
+                </div>
+
             </button>
 
         </div>
@@ -57,6 +65,10 @@
             <div class="div-notifications">
                 
                 <img class="notifications-icon" src="icons/notifications.svg">
+
+                <div class="tooltip">
+                    Notifications
+                </div>
 
                 <div class="div-notification-count">
                     5
