Add voice search functionality

--- a/YouTube.html
+++ b/YouTube.html
@@ -445,6 +445,18 @@
 
     </div> <!--end of video grid-->
 
+    <!-- Voice Search Modal -->
+    <div id="voice-search-modal" class="voice-search-modal">
+        <div class="voice-search-content">
+            <p>Listening...</p>
+            <div class="microphone-icon">
+                <img src="icons/voice-search-icon.svg" alt="Microphone">
+            </div>
+            <div id="voice-transcript" class="voice-transcript">Speak now...</div>
+            <button id="close-voice-search" class="close-button">&times;</button>
+        </div>
+    </div>
+
     <script src="scripts/script.js"></script>
     
 </body>
